# sicp-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
ch1/: Cargo.toml
ch1/src/: ex1.3.scm  ex1_11.rs  ex1_12.rs  ex1_3.rs  ex1_3.scm  ex1_7.rs  ex1_7.scm  ex1_8.rs  ex1_8.scm  lib.rs
