# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ch1"]
resolver = "2"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = "warn"
